src/objects/Stall__c.object
<CustomObject>
    <description>A space in the market that is flexible. These spaces are in the sheds or out side.</description>
    <fields>
        <fullName>Annual_Rent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area_Square_Meters__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Area Square Meters</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bond_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bond Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CWW_Annual_Parks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CWW Annual Parks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CWW_Customer_No__c</fullName>
        <label>CWW Customer No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CWW_Qtr_Drainage_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CWW Qtr Drainage Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CWW_Water_Usage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CWW Water Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Rent_Review__c</fullName>
        <label>Est. Rent Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FridayMultiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The Multiplier rate that will be added to the base rate for Friday</description>
        <inlineHelpText>The Multiplier rate that will be added to the base rate for Friday</inlineHelpText>
        <label>Friday Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FridayTrader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity (Account Business) allocated to this stall on Friday</description>
        <inlineHelpText>The Account Business allocated to this stall on Friday</inlineHelpText>
        <label>Friday Trader</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Friday Stalls</relationshipLabel>
        <relationshipName>FridayStalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Friday_Active_Price__c</fullName>
        <label>Friday Active Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frontage_Metres__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Frontage Metres</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Guarantee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Select if this stall is still a valid stall</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Commence__c</fullName>
        <label>Lease Commenced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Expiry__c</fullName>
        <label>Lease Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Notification_Date__c</fullName>
        <label>Lease Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Left__c</fullName>
        <label>Left</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Height__c</fullName>
        <label>Line Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCC_1st_Qtr_Ins__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MCC 1st Qtr Ins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MCC_2nd_Qtr_Ins__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MCC 2nd Qtr Ins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MCC_3rd_Qtr_Ins__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MCC 3rd Qtr Ins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MCC_4th_Qtr_Ins__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MCC 4th Qtr Ins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MCC_Cust_No__c</fullName>
        <label>MCC Cust No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metered_Water__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Metered Water $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MondayMultiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The Multiplier rate that will be added to the base rate for Monday</description>
        <inlineHelpText>The Multiplier rate that will be added to the base rate for Monday</inlineHelpText>
        <label>Monday Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MondayTrader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity (Account Business) allocated to this stall on Mondays</description>
        <inlineHelpText>The Account Business allocated to this stall on Mondays</inlineHelpText>
        <label>Monday Trader</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Monday Stalls</relationshipLabel>
        <relationshipName>MondayStalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monday_Active_Price__c</fullName>
        <label>Monday Active Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Rent__c</fullName>
        <formula>Annual_Rent__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_Terms__c</fullName>
        <label>Option Terms</label>
        <picklist>
            <picklistValues>
                <fullName>3yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nil</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to determine the mapping to QB</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Permanent Stall</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Stalls</relationshipLabel>
        <relationshipName>Stalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rent_Adjustment__c</fullName>
        <label>Rent Adjustment</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed 0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed 4%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed 5%</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rent_Commenced__c</fullName>
        <label>Rent Commenced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Review_Date__c</fullName>
        <label>Rent Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SaturdayMultiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The Multiplier rate that will be added to the base rate for Saturday</description>
        <inlineHelpText>The Multiplier rate that will be added to the base rate for Saturday</inlineHelpText>
        <label>Saturday Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SaturdayTrader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity (Account Business) allocated to this stall on Saturday</description>
        <inlineHelpText>The Account Business allocated to this stall on Saturday</inlineHelpText>
        <label>Saturday Trader</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Saturday Stalls</relationshipLabel>
        <relationshipName>SaturdayStalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saturday_Active_Price__c</fullName>
        <label>Saturday Active Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShedId__c</fullName>
        <label>Shed Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StallId__c</fullName>
        <label>Stall Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SundayMultiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The Multiplier rate that will be added to the base rate for Sunday</description>
        <inlineHelpText>The Multiplier rate that will be added to the base rate for Sunday</inlineHelpText>
        <label>Sunday Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SundayTrader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity (Account Business) allocated to this stall on Sunday</description>
        <inlineHelpText>The Account Business allocated to this stall on Sunday</inlineHelpText>
        <label>Sunday Trader</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sunday Stalls</relationshipLabel>
        <relationshipName>SundayStalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sunday_Active_Price__c</fullName>
        <label>Sunday Active Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tenant</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Stalls (Tenant)</relationshipLabel>
        <relationshipName>Perm_Stalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThursdayMultiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The Multiplier rate that will be added to the base rate for Thursday</description>
        <inlineHelpText>The Multiplier rate that will be added to the base rate for Thursday</inlineHelpText>
        <label>Thursday Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ThursdayTrader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity (Account Business) allocated to this stall on Thursday</description>
        <inlineHelpText>The Account Business allocated to this stall on Thursday</inlineHelpText>
        <label>Thursday Trader</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Thursday Stalls</relationshipLabel>
        <relationshipName>ThursdayStalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Thursday_Active_Price__c</fullName>
        <label>Thursday Active Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Top__c</fullName>
        <label>Top</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TuesdayMultiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The Multiplier rate that will be added to the base rate for Tuesday</description>
        <inlineHelpText>The Multiplier rate that will be added to the base rate for Tuesday</inlineHelpText>
        <label>Tuesday Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TuesdayTrader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity (Account Business) allocated to this stall on Tuesday</description>
        <inlineHelpText>The Account Business allocated to this stall on Tuesday</inlineHelpText>
        <label>Tuesday Trader</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tuesday Stalls</relationshipLabel>
        <relationshipName>TuesdayStalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tuesday_Active_Price__c</fullName>
        <label>Tuesday Active Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WednesdayMultiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The Multiplier rate that will be added to the base rate for Wednesday</description>
        <inlineHelpText>The Multiplier rate that will be added to the base rate for Wednesday</inlineHelpText>
        <label>Wednesday Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WednesdayTrader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity (Account Business) allocated to this stall on Wednesday</description>
        <inlineHelpText>The Account Business allocated to this stall on Wednesday</inlineHelpText>
        <label>Wednesday Trader</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Wednesday Stalls</relationshipLabel>
        <relationshipName>WednesdayStalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wednesday_Active_Price__c</fullName>
        <label>Wednesday Active Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Stall</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>TuesdayTrader__c</columns>
        <columns>TuesdayMultiplier__c</columns>
        <columns>ThursdayTrader__c</columns>
        <columns>ThursdayMultiplier__c</columns>
        <columns>FridayTrader__c</columns>
        <columns>FridayMultiplier__c</columns>
        <columns>SaturdayTrader__c</columns>
        <columns>SaturdayMultiplier__c</columns>
        <columns>SundayTrader__c</columns>
        <columns>SundayMultiplier__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stall Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stalls</pluralLabel>
    <recordTypes>
        <fullName>Casual</fullName>
        <active>true</active>
        <description>Stall locations that can change trader on a day to day basis</description>
        <label>Casual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Permanent</fullName>
        <active>true</active>
        <description>Permanent stall locationc</description>
        <label>Permanent</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>